--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 }
 .parallax-header {
   height: 70vh;
-  background-image: url("https://images.unsplash.com/photo-1506197603052-3cc9c3a201bd?auto=format&fit=crop&w=1920&q=80");
+  background-image: url("./public/images/photo_hero.png");
   background-size: cover;
   background-position: center;
 }
